--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -52,6 +52,7 @@ h2 {
 
 .bio {
   font-size: large;
+  background-color: black;
 }
 
 section {
@@ -61,6 +62,8 @@ section {
 
 .work {
   text-align: center;
+  background-color: dark;
+  color: white;
 }
 
 .key-realty {
