--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -72,16 +72,7 @@ section {
   margin: 0 auto;
 }
 
-article {
-  display: flex;
-  margin: 0 auto;
-}
 
-.work {
-  display: flex;
-  align-items: center;
-  margin: 0 auto;
-}
 
 body, html {
   height: 100%;
@@ -217,4 +208,15 @@ body, html {
 
 .tab-contents.active-tab{
   display: block;
+}
+
+/*-----------services------------*/
+#projects{
+  padding: 30px 0;
+}
+.projects-list{
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-gap: 40px;
+  margin-top: 50px; 
 }
