--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@ h2 {
 .headshot {
   width: 320px;
   margin-inline-end: 4rem;
+  border-radius: 10px;
 }
 
 .bio {
@@ -69,10 +70,8 @@ section {
   color: white;
 }
 
-.key-realty {
-  width: 500px;
-  margin-inline-end: 4rem;
-  margin: 0 auto;
+.group4repo{
+  display: block;
 }
 
 
@@ -215,15 +214,50 @@ body, html {
 
 /*-----------services------------*/
 #projects{
-  padding: 30px 0;
+  padding: 150px;
 }
 .projects-list{
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   grid-gap: 40px;
   margin-top: 50px; 
+  justify-content: center;
+  position: relative;
 }
 
-.task-card{
-  display: block;
+.projects-list div{
+  background:  #262626;
+  padding: 40px;
+  font-size: 17px;
+  font-weight: 300;
+  border-radius: 10px;
+  transition: background 0.5s, transform 0.5s;
 }
+
+.projects-list div:hover{
+  background: #ff004f;
+  transform: translateY(-10px);
+}
+
+
+.projects-list div h2{
+  font-size: 30px;
+  font-weight: 500;
+  margin-bottom: 15px;
+  margin-top: 30px;
+  color: bisque;
+  display: inline;
+}
+.projects-list div a{
+  text-decoration: none;
+  color: white;
+  font-weight: 500;
+  font-size: 16px;
+  margin-top: 20px;
+  display: inline;
+}
+.projects-list div a:hover{
+  background: black;
+  transform: translateY(-10px);
+}
+
