--- a/style.css
+++ b/style.css
@@ -237,6 +237,7 @@ body, html {
 .projects-list div:hover{
   background: #ff004f;
   transform: translateY(-10px);
+  transform: scale(1.1);
 }
 
 
@@ -261,3 +262,89 @@ body, html {
   transform: translateY(-10px);
 }
 
+/*---------------Contact Me Box----------------*/
+.contact-left{
+  flex-basis: 35%;
+}
+.contact-right{
+  flex-basis: 60%;
+}
+.contact-left p{
+  margin-top: 40px;
+  margin-bottom: 20px;
+
+}
+.contact-left p i{
+  color: #ff004f;
+  margin-right: 15px;
+  font-size: 25px;
+  }
+  .social-icons{
+    margin-top: 30px;
+  }
+  .social-icons a{
+    text-decoration: none;
+    font-size: 30px;
+    margin-right: 15px;
+    color: #ababab;
+    display:inline-block;
+    transition: tranform 0.5s;
+  }
+  .social-icons a:hover{
+    color: #ff004f;
+    transform: translateY(-5px);
+  }
+.btnn{
+  display: inline-block;
+  margin: 50px auto;
+  width: fit-content;
+  border: 2px solid #ff004f;
+  padding: 14px 50px;
+  border-radius: 6px;
+  background: #ff004f;
+  color: white;
+  text-decoration: none;
+  font-weight: 300;
+}
+.contact-right form{
+  width: 100%;
+}
+.contact-text{
+  font-size: 16px;
+  font-weight: 200;
+  color: white;
+}
+form input, form textarea{
+  width: 100%;
+  border: 0;
+  outline: none;
+  background: bisque;
+  padding: 15px;
+  margin: 15px 0;
+  color: white;
+  font-size: 18px;
+  border-radius: 6px;
+}
+form .btnn{
+  padding: 14px 60px;
+  font-size: 18px;
+  margin-top: 20px;
+  cursor: pointer;
+}
+.copyright{
+  width: 100%;
+  text-align: center;
+  padding: 25px 0;
+  background: #262626;
+  font-weight: 300;
+  margin-top: 20px;
+  color: bisque;
+}
+.copyright i{
+  color: #ff004f;
+}
+
+/*-------------------------------------css for small screens---------*/
+@media only screen and (max-width: 600px){
+  
+}
